--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: Personal Homepage
 
 # List of links in the navigation bar
 navbar-links:
-  Home: ""
+  Home: "index"
   Publications: "publications"
   Resume: "resume"
 
