--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,8 @@ author:
 
 # Select which links to show in the footer
 social-network-links:
-  email: "cczhou@ucdavis.edu"
-  github: chongzhou96
+  # email: "cczhou@ucdavis.edu"
+  # github: chongzhou96
   # rss: true
   # facebook: deanattali
   # twitter: daattali
@@ -88,8 +88,8 @@ share-links-active:
   twitter: false
   facebook: false
   linkedin: false
-  github: true
-  email: true
+  # github: true
+  # email: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
