--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Chong Zhou
 
 # Short description of your site
-description: Personal Homepage
+# description: Personal Homepage
 
 # --- Navigation bar options --- #
 
