--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Chong Zhou
 
 # Short description of your site
-description: UC Davis
+# description: UNC
 
 # --- Navigation bar options --- #
 
